<resources>
    <!--    <string name="default_web_client_id">927326515197-hnan1sc2mmslv2or01muqan1m3r6uikb.apps.googleusercontent.com</string>-->
    <string name="app_name">MeMail</string>
    <string name="categories">Categories</string>
    <string name="saved">Saved</string>
    <string name="history">History</string>
    <string name="school">School</string>
    <string name="profession">Profession</string>
    <string name="organization">Organization</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="formats">Formats</string>
</resources>