<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categoriesTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="center_vertical"
                android:paddingLeft="30dp"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="45sp" />

            <ImageButton
                android:id="@+id/savedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:background="#FFFFFF"
                android:contentDescription="@string/saved"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:src="@drawable/ic_heart_foreground" />

            <ImageView
                android:id="@+id/historyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:contentDescription="@string/saved"
                android:src="@drawable/ic_history_foreground" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/dark_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical"
            android:padding="30dp">

            <Button
                android:id="@+id/schoolButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:padding="40dp"
                android:text="@string/school"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:backgroundTint="@color/pink"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/professionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:padding="40dp"
                android:text="@string/profession"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:backgroundTint="@color/lavender"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/organizationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:padding="40dp"
                android:text="@string/organization"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:backgroundTint="@color/pale_blue"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/SignOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="Sign Out"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:paddingHorizontal="50dp"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>